admission/ValidatingAdmissionPolicy/policies/volume-types/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-types-pod
  annotations:
    kubeapt.io/uuid: "d727820a-72b4-4c75-bf4c-17da0e3e4c81"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    volumeMounts:
    - name: repo
      mountPath: /repo
  volumes:
  - name: repo
    gitRepo:
      repository: https://github.com/kubernetes/kubernetes.git
